// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default setup 1`] = `
Object {
  "Resources": Object {
    "BackupBucket26B8E51C": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "BucketEncryption": Object {
          "ServerSideEncryptionConfiguration": Array [
            Object {
              "ServerSideEncryptionByDefault": Object {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "LifecycleConfiguration": Object {
          "Rules": Array [
            Object {
              "ExpirationInDays": 35,
              "Status": "Enabled",
            },
          ],
        },
        "PublicAccessBlockConfiguration": Object {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "S3CodecommitBackupBackupProject92CAF3BE": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:2.0",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "S3CodecommitBackupBackupProjectRole1AE06943",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": Object {
            "Fn::Join": Array [
              "",
              Array [
                "{
  \\"version\\": \\"0.2\\",
  \\"env\\": {
    \\"git-credential-helper\\": \\"yes\\"
  },
  \\"phases\\": {
    \\"pre_build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Clone repository: repo1 =====]\\\\\\"\\",
        \\"git clone \\\\\\"https://git-codecommit.",
                Object {
                  "Ref": "AWS::Region",
                },
                ".",
                Object {
                  "Ref": "AWS::URLSuffix",
                },
                "/v1/repos/repo1\\\\\\"\\"
      ]
    },
    \\"build\\": {
      \\"commands\\": [
        \\"dt=$(date -u '+%Y_%m_%d_%H_%M')\\",
        \\"zipfile=\\\\\\"repo1_backup_\${dt}_UTC.tar.gz\\\\\\"\\",
        \\"echo \\\\\\"Compressing repository: repo1 into file: \${zipfile} and uploading to S3 bucket: ",
                Object {
                  "Ref": "BackupBucket26B8E51C",
                },
                "/repo1\\\\\\"\\",
        \\"tar -zcvf \\\\\\"\${zipfile}\\\\\\" \\\\\\"repo1/\\\\\\"\\",
        \\"aws s3 cp \\\\\\"\${zipfile}\\\\\\" \\\\\\"s3://",
                Object {
                  "Ref": "BackupBucket26B8E51C",
                },
                "/repo1/\${zipfile}\\\\\\"\\"
      ]
    }
  }
}",
              ],
            ],
          },
          "Type": "NO_SOURCE",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "S3CodecommitBackupBackupProjectEventsRoleD78BA4F1": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "S3CodecommitBackupBackupProjectEventsRoleDefaultPolicyDB9A02C4": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "S3CodecommitBackupBackupProject92CAF3BE",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "S3CodecommitBackupBackupProjectEventsRoleDefaultPolicyDB9A02C4",
        "Roles": Array [
          Object {
            "Ref": "S3CodecommitBackupBackupProjectEventsRoleD78BA4F1",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "S3CodecommitBackupBackupProjectRole1AE06943": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "S3CodecommitBackupBackupProjectRoleDefaultPolicy0DD7A726": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "S3CodecommitBackupBackupProject92CAF3BE",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "S3CodecommitBackupBackupProject92CAF3BE",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    Object {
                      "Fn::GetAtt": Array [
                        "BackupBucket26B8E51C",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "codecommit:BatchGet*",
                "codecommit:Get*",
                "codecommit:Describe*",
                "codecommit:List*",
                "codecommit:GitPull",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codecommit:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":repo1",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "S3CodecommitBackupBackupProjectRoleDefaultPolicy0DD7A726",
        "Roles": Array [
          Object {
            "Ref": "S3CodecommitBackupBackupProjectRole1AE06943",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "S3CodecommitBackupScheduleRuleBDDF5519": Object {
      "Properties": Object {
        "ScheduleExpression": "cron(0 4 * * ? *)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "S3CodecommitBackupBackupProject92CAF3BE",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "S3CodecommitBackupBackupProjectEventsRoleD78BA4F1",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;

exports[`events 1`] = `
Object {
  "Resources": Object {
    "BackupBucket26B8E51C": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "BucketEncryption": Object {
          "ServerSideEncryptionConfiguration": Array [
            Object {
              "ServerSideEncryptionByDefault": Object {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "LifecycleConfiguration": Object {
          "Rules": Array [
            Object {
              "ExpirationInDays": 35,
              "Status": "Enabled",
            },
          ],
        },
        "PublicAccessBlockConfiguration": Object {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "S3CodecommitBackupBackupProject92CAF3BE": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:2.0",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "S3CodecommitBackupBackupProjectRole1AE06943",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": Object {
            "Fn::Join": Array [
              "",
              Array [
                "{
  \\"version\\": \\"0.2\\",
  \\"env\\": {
    \\"git-credential-helper\\": \\"yes\\"
  },
  \\"phases\\": {
    \\"pre_build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Clone repository: repo1 =====]\\\\\\"\\",
        \\"git clone \\\\\\"https://git-codecommit.",
                Object {
                  "Ref": "AWS::Region",
                },
                ".",
                Object {
                  "Ref": "AWS::URLSuffix",
                },
                "/v1/repos/repo1\\\\\\"\\"
      ]
    },
    \\"build\\": {
      \\"commands\\": [
        \\"dt=$(date -u '+%Y_%m_%d_%H_%M')\\",
        \\"zipfile=\\\\\\"repo1_backup_\${dt}_UTC.tar.gz\\\\\\"\\",
        \\"echo \\\\\\"Compressing repository: repo1 into file: \${zipfile} and uploading to S3 bucket: ",
                Object {
                  "Ref": "BackupBucket26B8E51C",
                },
                "/repo1\\\\\\"\\",
        \\"tar -zcvf \\\\\\"\${zipfile}\\\\\\" \\\\\\"repo1/\\\\\\"\\",
        \\"aws s3 cp \\\\\\"\${zipfile}\\\\\\" \\\\\\"s3://",
                Object {
                  "Ref": "BackupBucket26B8E51C",
                },
                "/repo1/\${zipfile}\\\\\\"\\"
      ]
    }
  }
}",
              ],
            ],
          },
          "Type": "NO_SOURCE",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "S3CodecommitBackupBackupProjectEventsRoleD78BA4F1": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "S3CodecommitBackupBackupProjectEventsRoleDefaultPolicyDB9A02C4": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "S3CodecommitBackupBackupProject92CAF3BE",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "S3CodecommitBackupBackupProjectEventsRoleDefaultPolicyDB9A02C4",
        "Roles": Array [
          Object {
            "Ref": "S3CodecommitBackupBackupProjectEventsRoleD78BA4F1",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "S3CodecommitBackupBackupProjectRole1AE06943": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "S3CodecommitBackupBackupProjectRoleDefaultPolicy0DD7A726": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "S3CodecommitBackupBackupProject92CAF3BE",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "S3CodecommitBackupBackupProject92CAF3BE",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    Object {
                      "Fn::GetAtt": Array [
                        "BackupBucket26B8E51C",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "codecommit:BatchGet*",
                "codecommit:Get*",
                "codecommit:Describe*",
                "codecommit:List*",
                "codecommit:GitPull",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codecommit:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":repo1",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "S3CodecommitBackupBackupProjectRoleDefaultPolicy0DD7A726",
        "Roles": Array [
          Object {
            "Ref": "S3CodecommitBackupBackupProjectRole1AE06943",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "S3CodecommitBackupBackupProjectfailed2E64FE18": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "build-status": Array [
              "FAILED",
            ],
            "project-name": Array [
              Object {
                "Ref": "S3CodecommitBackupBackupProject92CAF3BE",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Ref": "TopicBFC7AF6E",
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "S3CodecommitBackupBackupProjectstartedB41DC829": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "build-status": Array [
              "IN_PROGRESS",
            ],
            "project-name": Array [
              Object {
                "Ref": "S3CodecommitBackupBackupProject92CAF3BE",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Ref": "TopicBFC7AF6E",
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "S3CodecommitBackupBackupProjectsucceeded91711467": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "build-status": Array [
              "SUCCEEDED",
            ],
            "project-name": Array [
              Object {
                "Ref": "S3CodecommitBackupBackupProject92CAF3BE",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Ref": "TopicBFC7AF6E",
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "S3CodecommitBackupScheduleRuleBDDF5519": Object {
      "Properties": Object {
        "ScheduleExpression": "cron(0 4 * * ? *)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "S3CodecommitBackupBackupProject92CAF3BE",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "S3CodecommitBackupBackupProjectEventsRoleD78BA4F1",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "TopicBFC7AF6E": Object {
      "Type": "AWS::SNS::Topic",
    },
    "TopicPolicyA1747468": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
              "Resource": Object {
                "Ref": "TopicBFC7AF6E",
              },
              "Sid": "0",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
  },
}
`;
